# py-compartmental-modeling

./: .gitignore  README.md  pyproject.toml
src/metrics/: neg_binom_deviance.py
src/models/: BaseModel.py  SIRModel.py  __init__.py  base_model.py  sir_model.py
tests/models/: test_sir_model.py
tests/models/metrics/: test_neg_binom_deviance.py
