[project]
name = "py-compartmental-modeling"
version = "0.1.0"
description = ""
authors = [
    {name = "Thummanoon Kunanuntakij",email = "tkunanuntakij@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scipy (>=1.16.3,<2.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "optuna (>=4.6.0,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "numba (>=0.62.1,<0.63.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
black = "^25.11.0"
pytest = "^9.0.1"
ruff = "^0.14.6"

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.poe.tasks]
test = "pytest"
unittest = "pytest -v -m 'not integration'"
ruff = "ruff check"
black = "black ."
mypy = "mypy"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = [
    "playground",
]
